--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 <body>
-
+<!-- TODO: change the name of this file from Index.html -> index.html -->
 <div class="prof-box">
     <img src="Images/MacklinProfilePic.png" class="prof-pic">
     <h1>Macklin Thomas</h1>
