--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 <body>
 
 <div class="prof-box">
+  <a href=#>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+  </a>
     <img src="Images/MacklinProfilePic.png" class="prof-pic">
     <h1>Macklin Thomas</h1>
     <h5>Software Engineer | iOS Developer</h5>
+    <p>Macklinthomas5@gmail.com</p>
 
     <div class="break-line"></div>
 
@@ -21,9 +28,11 @@
     <a href="https://www.instagram.com/ayeyomack/" target="_blank"> <i class="fab fa-instagram"></i></a>
     <a href="https://www.linkedin.com/in/macklin-thomas-500571133/" target="_blank"> <i class="fab fa-linkedin"></i></a>
     <a href="https://github.com/Macklinthomas" target="_blank"> <i class="fab fa-github-square"></i></a>
+  </div>
 </div>
-</div>
-<div class="About-Box">
+<br>
+<br>
+<!-- <div class="About-Box">
     <h1>ABOUT</h1>
     <div class="About-Break-Line"></div>
     <p class="About-Me-Paragraph">
@@ -32,7 +41,7 @@
         I am the secretary of the Texas Southern Mobile Application Development group where we mentor and teach others how to develop mobile and web applications.
         I am also a cadet in the Texas Army National Guard where I plan to commission as a Second Lieutenant from the University of Houston ROTC program.
     </p>
-</div>
+</div> -->
 <div>
   <section id="timeline">
     <div class="t1-item">
@@ -41,19 +50,19 @@
       <p class="f2 heading">2016</p>
     </div>
       <div class="t1-content">
-        <h1>kjfsdfja asdfjkasdf; adkfjadkf</h1>
+        <h1>FRESHMAN</h1>
         <p>
           During the year I was hired on to a start up called EdTech Solutions. We ran an attendance management system for the univeristy called RollCall. 
       </p>
     </div>
   </div>
   <div class="t1-item">
-    <div class="t1-bg" style="background-image:url(Images/Photo71.jpg)"></div>
+    <div class="t1-bg" style="background-image:url(Images/Photo8.jpg)"></div>
   <div class="t1-year">
     <p class="f2 heading">2017</p>
   </div>
     <div class="t1-content">
-      <h1>kjfsdfja asdfjkasdf; adkfjadkf</h1>
+      <h1>SOPHOMORE</h1>
       <p>
         Completed internship with MP2 Energy, A Shell A Subsidiary. There I was on the Demand Response team where I developed an alert system to measure peak kilowatt hour real time data. Started another internship with ConocoPhillips where I managed all of the mobile devices in the corporation.
     </p>
@@ -65,7 +74,7 @@
   <p class="f2 heading">2018</p>
 </div>
   <div class="t1-content">
-    <h1>kjfsdfja asdfjkasdf; adkfjadkf</h1>
+    <h1>JUNIOR</h1>
     <p>
       First half of the summer I completed my 2nd internship with Conocophillips. There I developed a web application that automates the process of requesting server access. The second half of the summer I completed an Army training camp that is design to test officer leadership skills in rigorous environments.
   </p>
@@ -77,15 +86,60 @@
   <p class="f2 heading">2019</p>
 </div>
   <div class="t1-content">
-    <h1>kjfsdfja asdfjkasdf; adkfjadkf</h1>
+    <h1>SENIOR</h1>
     <p>
       Graduated with my BS in Computer Science from Texas Southern University. I also became a Signal Officer in the US Army and accepted a full-time offer from ConocoPhillips. 
   </p>
 </div>
 </div>
-
-
+</section>
+</div>
+<div class=ProjectDisplay>
+<section class="BoxOne">
+  <div class="content">
+    <h1>
+      First Project
+    </h1>
+    <p>
+      During my senior year I was the user interface designer for our capstone project. Some of my classmates and I developed a website that would create unique passwords and store them. Once the user creates an account they have the option to store specific passwords for certain websites. Our password generator algorithm used alphabets, numbers, and special characters. The end goal was to be able to get permission for our site to auto populate the passwords in the websites that are stored in the users account. Before we could finish the semester ended and the team separated to their full-time jobs.
+    </p>
+  </div>
+</section>
+<div class="ComputerImage">
+<img src="Images/BlankComputerImage.png" height="400" width="500"> 
+</div>
+<div class="WebsiteImage">
+  <img src="Images/WebsiteTemplate.png" height="290" width="475"> 
+  </div>
+<div class="PhoneImage">
+    <img src="Images/BlankComputerImage.png" height="400" width="500"> 
+</div>
+<div class="PhoneImageExcel">
+  <img src="Images/maxresdefault.jpg" height="280" width="470"> 
+</div>
+<section class="BoxTwo">
+    <div class="content">
+      <h1>
+        Second Project
+      </h1>
+      <p>
+        During my internship with MP2 Energy I designed a program that sends an email alert to the Demand Response team when there is a change in peak kilowatt hours on the electrical grid. The program runs in 15 minute increments once it is manually started at the beginning of the day. Using VBA, Sql, and some JavaScript I was able to retrieve the raw data and clean it and submit it into a program that checks the data and decides if an alert needs to be sent or not. The end goal for this project was to have the program running 24/7 but only checks between 6AM-4PM.
+      </p>
+    </div>
   </section>
 </div>
+<footer>
+    <div class="footer">
+        <div class="footer-content">
+          <div class="footer-section about"></div>
+          <div class="footer-section link"></div>
+          <div class="footer-section contact-form"></div>
+        </div>
+      
+        <div class="footer-bottom">
+          &copy; Macklinthomas.com | Designed by LiveLive
+          </div>
+      </div>
+</footer>
 </body>
 </html>
